<resources>
    <string name="app_name">CinectTM</string>
    <string name="userage">UserAge</string>
    <string name="movie_genres">Movie genres</string>
    <string name="usergenres">UserGenres</string>
    <string name="username">UserName</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="txtusername">UserName</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="or_login_with">or login with</string>
    <string name="tusername">Username</string>
    <string name="ppassword">Password</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="appwidget_text">🎬🎲</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>